[project]
name = "slow-query-analysis"
version = "0.1.0"
description = "A comprehensive analysis tool for analyzing query performance data"
authors = [
    {name = "Meghana Patakota", email = "megpatakota@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=6.4.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.4.7"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slow-query-analysis"
version = "0.1.0"
description = "A comprehensive analysis tool for analyzing query performance data"
authors = ["Meghana Patakota <megpatakota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
plotly = ">=6.4.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
notebook = "^7.4.7"

